<resources>
  <string name="app_name">ClubManagement</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="btn_remove">Remove</string>
  <string name="placeholder">Placeholder</string>
  <string name="title_activity_add_member">Add Member</string>
  <string name="first_name">First Name</string>
  <string name="sur_name">Surname</string>
  <string name="second_name">Second Name</string>

  <string name="facility_name">Facility Name</string>
  <string name="facility_description">Facility Description</string>


  <string name="save">Save</string>
  <string name="first_name_validation_msg">Please fill in first name</string>
  <string name="second_name_validation_msg">Please fill in second name</string>
  <string name="facility_name_validation_msg">Please fill in Facility Name</string>
  <string name="sur_name_validation_msg">Please fill in surname</string>
  <string name="mem_select_validation_msg">Please select a member</string>
  <string name="fac_select_validation_msg">Please select a facility</string>
  <string name="save_successful">Saved successfully!</string>
  <string name="generic_error">Sorry something went wrong! We\'re looking into it!</string>
  <string name="empty_value">Add new ones to appear here!!</string>
  <string name="date_select">Date</string>
  <string name="strt_time_select">Start Time</string>
  <string name="end_time_select">End Time</string>
  <string name="title_activity_add_booking">Add Booking</string>
  <string name="txt_member">Member</string>
  <string name="txt_facility">Facility</string>
  <string name="st_time_et_time_validation_msg">Start time should be greater than End time</string>
  <string name="date_validation_msg">Please select a valid date for booking</string>
  <string name="time_validation_msg">Please select a valid time for booking</string>
  <string name="title_activity_add_facility">AddFacilityActivity</string>
</resources>
