<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sg.edu.nus.clubmanagement.activity.AddFacilityActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:id="@+id/tv_facility_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="4dp" />
            <EditText
                android:id="@+id/et_facility_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/tv_facility_description"
                android:hint="@string/facility_name"
                />

            <TextView
                android:id="@+id/tv_facility_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facility_description"
                android:layout_below="@id/et_facility_description"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingLeft="4dp"
                />
            <EditText
                android:id="@+id/et_facility_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/second_name"

                />


        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/white"
        />
</RelativeLayout>
