<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sg.edu.nus.clubmanagement.activity.AddBookingActivity"
    >

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
      <Spinner
          android:id="@+id/spn_member"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          >
      </Spinner>
      <Spinner
          android:id="@+id/spn_facility"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="20dp"
          android:layout_below="@id/spn_member"
          >
      </Spinner>

      <EditText
          android:id="@+id/et_select_date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/date_select"
          android:layout_below="@id/spn_facility"
          android:layout_margin="20dp"
          android:inputType="date"
          android:textSize="20sp"
          android:focusable="false"
          />
      <EditText
          android:id="@+id/et_select_strt_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/strt_time_select"
          android:layout_toRightOf="@id/et_select_date"
          android:layout_toEndOf="@id/et_select_date"
          android:layout_margin="10dp"
          android:focusable="false"
          android:textSize="20sp"
          android:inputType="datetime"
          android:layout_alignBaseline="@id/et_select_date"
          />
      <EditText
          android:id="@+id/et_select_end_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:focusable="false"
          android:hint="@string/end_time_select"
          android:layout_toEndOf="@id/et_select_strt_time"
          android:layout_toRightOf="@id/et_select_strt_time"
          android:layout_margin="10dp"
          android:layout_alignBaseline="@id/et_select_date"
          android:inputType="datetime"
          android:textSize="20sp"
          />
    </RelativeLayout>
  </ScrollView>
  <Button
      android:id="@+id/btn_save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_margin="20dp"
      android:background="@color/colorPrimary"
      android:text="@string/save"
      android:textColor="@android:color/white"
      />
</RelativeLayout>
